Fixed an issue with the loading indicator in IE

--- a/modules/documents/client/views/document-manager-link.html
+++ b/modules/documents/client/views/document-manager-link.html
@@ -23,11 +23,7 @@
                 <!-- Load the File/Folder Directory -->
                 <!-- TODO: Remove 'hidden' selector when complete -->
                 <div class="spinner-container" ng-show="documentMgr.busy">
-                    <div class="spinner">
-                        <svg class="circular" viewBox="25 25 50 50">
-                            <circle class="spin-path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
-                        </svg>
-                    </div>
+			        <div class="spinner-new rotating"></div>
                 </div>
                 
                 <!-- Column Header -->
