--- a/modules/core/client/styles/spinner.scss
+++ b/modules/core/client/styles/spinner.scss
@@ -5,91 +5,15 @@ $spinner-bg: rgba(255,255,255,0.8);
 $spinner-invert-color: #FFF;
 $spinner-invert-bg: rgba(0,0,0,0.8);
 
-.spinner {
-  	width: $spinner-width;
-	opacity: 1;
-  	
-	  &:before {
-    	content: '';
-    	display: block;
-    	padding-top: 100%;
-  	}
-}
-
-.spin-path {
-  	stroke-dasharray: 1, 200;
-  	stroke-dashoffset: 0;
-  	animation: dash 1.5s ease-in-out infinite, spin 6s ease-in-out infinite;
-  	stroke-linecap: round;
-}
-
-/* ANIMATIONS */
-@keyframes rotate {
-  	100% {
-    	transform: rotate(360deg);
-  	}
-}
-
-@keyframes dash {
-  	0% {
-    	stroke-dasharray: 1, 200;
-    	stroke-dashoffset: 0;
-  	}
-  	50% {
-    	stroke-dasharray: 89, 200;
-    	stroke-dashoffset: -35px;
-  	}
-  	100% {
-    	stroke-dasharray: 89, 200;
-    	stroke-dashoffset: -124px;
-  	}
-}
-
-@keyframes spin {
-	100%,
-	0% {
-		stroke: $spinner-color;
-	}
-	40% {
-		stroke: $spinner-color;
-	}
-	66% {
-		stroke: $spinner-color;
-	}
-	80%,
-	90% {
-		stroke: $spinner-color;
-	}
-}
-
-@keyframes spin-inverted {
-	100%,
-	0% {
-		stroke: $spinner-invert-color;
-	}
-	40% {
-		stroke: $spinner-invert-color;
-	}
-	66% {
-		stroke: $spinner-invert-color;
-	}
-	80%,
-	90% {
-		stroke: $spinner-invert-color;
-	}
-}
-
-.circular {
-  	animation: rotate 2s linear infinite;
-  	height: 100%;
-  	transform-origin: center center;
-  	width: 100%;
- 	position: absolute;
-  	top: 0;
-  	bottom: 0;
-  	left: 0;
-  	right: 0;
-  	margin: auto;
+.spinner-new {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 50px;
+	height: 50px;
+	margin-top: calc(-#{$spinner-width} / 1.5);
+	margin-left: calc(-#{$spinner-width} / 2);
+	background-image: url("/modules/core/client/img/loaders/spinner.png")
 }
 
 .spinner-container {
@@ -102,24 +26,67 @@ $spinner-invert-bg: rgba(0,0,0,0.8);
 	background: $spinner-bg;
 	z-index: 2;
 
-	&.inverted {
+	&.inverted,
+	&.transparent {
 		background: $spinner-invert-bg;
 
-		.spin-path {
-			animation: dash 1.5s ease-in-out infinite, spin-inverted 6s ease-in-out infinite;
+		.spinner-new {
+			background-image: url("/modules/core/client/img/loaders/spinner-inverted.png")		
 		}
+	}
+
+	&.inverted {
+		background: $spinner-invert-bg;
+	}
+
+	&.transparent {
+		background: transparent;
 	}
 
     &.fixed {
         position: fixed;
         z-index: 1000;
     }
+}
 
-	.spinner {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		margin-top: calc(-#{$spinner-width} / 1.5);
-		margin-left: calc(-#{$spinner-width} / 2);
-	}
+@-webkit-keyframes rotating {
+  from {
+	-ms-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-webkit-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+  }
+  to {
+	-ms-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	-o-transform: rotate(360deg);
+	transform: rotate(360deg);
+  }
+}
+
+@keyframes rotating {
+  from {
+	-ms-transform: rotate(0deg);
+	-moz-transform: rotate(0deg);
+	-webkit-transform: rotate(0deg);
+	-o-transform: rotate(0deg);
+	transform: rotate(0deg);
+  }
+  to {
+	-ms-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-webkit-transform: rotate(360deg);
+	-o-transform: rotate(360deg);
+	transform: rotate(360deg);
+  }
+}
+
+.rotating {
+	-webkit-animation: rotating 1s linear infinite;
+	-moz-animation: rotating 1s linear infinite;
+	-ms-animation: rotating 1s linear infinite;
+	-o-animation: rotating 1s linear infinite;
+	animation: rotating 1s linear infinite;
 }
