--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -96,13 +96,8 @@
 		<div class="fb-list">
 
 			<!-- Load the File/Folder Directory -->
-			<!-- TODO: Remove 'hidden' selector when complete -->
 			<div class="spinner-container" ng-show="documentMgr.busy">
-				<div class="spinner">
-					<svg class="circular" viewBox="25 25 50 50">
-					<circle class="spin-path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
-					</svg>
-				</div>
+				<div class="spinner-new rotating"></div>
 			</div>
 			
 			<div class="column-header">
@@ -315,13 +310,8 @@
 		</div>
 		<div class="fb-details-panel">
 			<!-- Load the File/Folder Details -->
-			<!-- TODO: Remove 'hidden' selector when complete -->
 			<div class="spinner-container" ng-show="documentMgr.busy">
-				<div class="spinner">
-					<svg class="circular" viewBox="25 25 50 50">
-					<circle class="spin-path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
-					</svg>
-				</div>
+				<div class="spinner-new rotating"></div>
 			</div>
 			<div class="fb-details-content" ng-if="documentMgr.infoPanel.data && documentMgr.infoPanel.type === 'File'">
 				<div class="title-panel">
