--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -1,3 +1,6 @@
+<div class="spinner-container" ng-show="s.busy">
+	<div class="spinner-new rotating"></div>
+</div>
 <div class="modal-header">
 	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
 	<h3 class="modal-title">Edit Roles &nbsp;&rsaquo;&nbsp; {{s.name}}</h3>
