--- a/modules/guidance/client/views/contact.html
+++ b/modules/guidance/client/views/contact.html
@@ -1,3 +1,5 @@
+<div class="main-panel">
+
 <div class="view-title-container no-border">
     <h1>Contact Us</h1>
 </div>
@@ -23,5 +25,7 @@
         <p>It marks a substantial business and process change for all participants and stakeholders in the environmental assessment process, including project proponents, Aboriginal groups, working group members, and the public.</p>
         <p>The Environmental Assessment Office will continue making improvements to EPIC over time, so if you are interested in providing us with feedback about your experience in using this website, please feel free to send us your comments at: <a class="content-link" href="mailto:epicsupport.eao@gov.bc.ca">epicsupport.eao@gov.bc.ca</a>.</p>
     </section>
+
+</div>
 
 </div>
