ESM-692 - Update PCP Test
- Small fix as per stakeholder request.

--- a/modules/project-comments/client/views/public-comments/add.html
+++ b/modules/project-comments/client/views/public-comments/add.html
@@ -14,7 +14,7 @@
 		<p>You may choose to provide your name and city/town when making a comment, but in order to have your name displayed with your comment; you must select the 'Make my Name visible to public' option. All hyperlinks in comments will be converted to plain text. All attachments must be in PDF format and limited to 5MB.</p>
 		<hr>
 		<p><strong>Privacy Policy</strong></p>
-		<p>Personal information collected through this comment period will inform the Environmental Assessment Office on the <em>{{project.name}}</em> under the authority of s.26 (c) and (e) of the <a href="http://www.bclaws.ca/Recon/document/ID/freeside/96165_00" target="_blank">Freedom of Information and Protection of Privacy Act</a>. If you have any questions about the collection, use and disclosure of your personal information, please contact:</p>
+		<p>Personal information collected through this comment period will inform the Environmental Assessment Office on the <em>{{project.name}} Project</em> under the authority of s.26 (c) and (e) of the <a href="http://www.bclaws.ca/Recon/document/ID/freeside/96165_00" target="_blank">Freedom of Information and Protection of Privacy Act</a>. If you have any questions about the collection, use and disclosure of your personal information, please contact:</p>
 		<p class="m-b-0">Rumon Carter - Director, Engagement &amp; Digital Services<br>Environmental Assessment Office<br>836 Yates Street, Victoria, BC<br>Rumon.Carter@gov.bc.ca<br>(250) 356-7440
 	</div>
 	<div class="modal-footer">
