ESM-701 - Testing fix for opening folders on touch devices

--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -191,6 +191,10 @@
 											</li>
 										</ul>
 									</div>
+
+									<button class="drill-in-btn btn icon-btn" ng-click="documentMgr.openDir(doc)">
+										<span class="glyphicon glyphicon-menu-right"></span>
+									</button>
 									
 								</div>
 							</span>
