MEM-204: change logic to use batch db calls and break up into multiple client calls to keep alive.

--- a/modules/core/client/views/role-users-modal.html
+++ b/modules/core/client/views/role-users-modal.html
@@ -1,5 +1,6 @@
 <div class="spinner-container" ng-show="s.busy">
 	<div class="spinner-new rotating"></div>
+	<!--div>{{s.progressMsg}}</div-->
 </div>
 <div class="modal-header">
 	<button class="btn btn-default close" ng-click="s.cancel()"><span aria-hidden="true">×</span></button>
