MEM-205,MEM162: add new defaults for document permissions.  Add new project permission to control document permission assignment (manageDocumentPermissions), add in the Edit Permissions button for individual documents/files.

--- a/modules/core/client/views/role-permissions-gear.html
+++ b/modules/core/client/views/role-permissions-gear.html
@@ -1,7 +1,7 @@
 
-<button class="btn btn-default btn-sm" ng-if="permCtrl.showGear" 
-    ng-click="$event.stopPropagation()" 
-    x-role-permissions-modal 
-    x-context="context" 
-    x-object="object">
-        <span class="glyphicon glyphicon-cog"></span></button>
+<button class="btn btn-default btn-sm" ng-if="permCtrl.showGear"
+        title="Edit Permissions"
+        ng-click="$event.stopPropagation()"
+        x-role-permissions-modal
+        x-context="context"
+        x-object="object"><span class="glyphicon glyphicon-cog"></span></button>
