MEM-223: implement move files and folders.  Must have manageFolders, and can only move files that user has write.  Further limitation on selection of folders, any folder selected to move, cannot be drilled into in the Select Folder dialog (a source cant be a destination.

--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -79,12 +79,16 @@
 							x-confirm-items="documentMgr.publishSelected.confirmItems"
 							x-on-ok="documentMgr.publishSelected.unpublish"><span class="glyphicon glyphicon-ban-circle"></span> Unpublish</a>
 					</li>
-					<li hidden>
+					<li>
 						<a title="Move Folders & Files"
-							x-document-mgr-move
-							x-title-text="'Unpublish File(s)'"
-							x-ok-text="documentMgr.publishSelected.okText"
-							x-cancel-text="documentMgr.publishSelected.cancelText"><span class="glyphicon glyphicon-transfer"></span> Move to...</a>
+						   ng-hide="documentMgr.moveSelected.moveableFiles.length === 0 && documentMgr.moveSelected.moveableFolders.length === 0"
+						   x-confirm-dialog
+						   x-title-text="documentMgr.moveSelected.titleText"
+						   x-ok-text="documentMgr.moveSelected.okText"
+						   x-cancel-text="documentMgr.moveSelected.cancelText"
+						   x-confirm-text="documentMgr.moveSelected.confirmText"
+						   x-confirm-items="documentMgr.moveSelected.confirmItems"
+						   x-on-ok="documentMgr.moveSelected.ok"><span class="glyphicon glyphicon-transfer"></span> Move to...</a>
 					</li>
 				</ul>
 			</div>
