--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -57,7 +57,8 @@
 						<ul class="tag-list">
 							<li class="tag" ng-repeat="o in vclist">
 								<span class="tag-name">{{o.title}}</span>
-							</li><li class="add-tag">
+							</li>
+							<li class="add-tag">
 								<button class="add-btn btn btn-sm"
 									x-vc-linker
 									x-project="project"
