--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -32,7 +32,7 @@
 					ng-disabled="!documentMgr.lastChecked"
 					ng-click="documentMgr.infoPanel.toggle()"><span class="glyphicon glyphicon-info-sign"></span></button>
 			
-			<div class="btn-group">
+			<div class="fb-menu btn-group">
 				<button type="button" class="btn icon-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" ng-disabled="!documentMgr.batchMenuEnabled">
 					<span class="glyphicon glyphicon glyphicon-option-vertical"></span>
 				</button>
@@ -191,11 +191,9 @@
 											</li>
 										</ul>
 									</div>
-
 									<button class="drill-in-btn btn icon-btn" ng-click="documentMgr.openDir(doc)">
 										<span class="glyphicon glyphicon-menu-right"></span>
-									</button>
-									
+									</button>	
 								</div>
 							</span>
 						</li>
@@ -222,10 +220,6 @@
 								<span hidden class="col author-col" title="{{ doc.documentAuthor }}">
 									{{ doc.documentAuthor }}
 								</span>
-								<!--
-								<span class="col size-col">{{ doc.internalSize | bytes:2 }}</span>
-								<span class="col type-col">{{ doc.internalExt}}</span>
-								-->
 								<span class="col date-added-col">{{ doc.dateUploaded | date : format : timezone }}</span>
 								<span class="col status-col last-col" ng-if="authentication.user">
 									<span ng-if="doc.isPublished" title="Published"><span class="glyphicon glyphicon-ok-circle"></span></span>
@@ -302,13 +296,6 @@
 													<span class="glyphicon glyphicon-info-sign"></span>
 												</button>
 											</li>
-											<!--
-											<li>
-												<button class="btn icon-btn" title="Edit Folder Details" ng-click="$event.stopPropagation();">
-													<span class="glyphicon glyphicon-pencil"></span>
-												</button>
-											</li>
-											-->
 										</ul>
 									</div>
 									
@@ -325,86 +312,103 @@
 			<div class="spinner-container" ng-show="documentMgr.busy">
 				<div class="spinner-new rotating"></div>
 			</div>
+			
+			<!-- FILE DETAILS -->
 			<div class="fb-details-content" ng-if="documentMgr.infoPanel.data && documentMgr.infoPanel.type === 'File'">
 				<div class="title-panel">
-					<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
-						<span aria-hidden="true">&times;</span>
-					</button>
-					<h2 title="{{documentMgr.infoPanel.data.displayName | removeExtension}}">{{documentMgr.infoPanel.data.displayName | removeExtension }}</h2>
-					<!--
-					<h2>Fetching Details...</h2>
-					-->
+					<div class="title-panel-info">
+						<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h2 title="{{documentMgr.infoPanel.data.displayName | removeExtension}}">{{documentMgr.infoPanel.data.displayName | removeExtension }}</h2>
+					</div>
+					<div class="title-panel-btns">
+						<button class="btn btn-sm btn-default">Download</button>
+						<button class="btn btn-sm btn-default">View</button>
+						<button class="btn btn-sm btn-default" x-document-mgr-edit>Edit</button>
+						<div class="fb-menu btn-group">
+							<button class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown">More</button>
+							<ul class="dropdown-menu pull-right">
+								<li>
+									<a title="Edit Permissions" ng-if="project.userCan.manageDocumentPermissions"
+										x-role-permissions-modal
+										x-context="project"
+										x-object="documentMgr.infoPanel.data"><span class="glyphicon glyphicon-cog"></span> Edit Permissions</a>
+								</li>
+								<li>
+									<a title="Delete File"><span class="glyphicon glyphicon-cog"></span> Delete</a>
+								</li>
+								<li>
+									<a title="Delete File"><span class="glyphicon circle-ok"></span> Publish</a>
+								</li>
+								<li>
+									<a title="Delete File"><span class="glyphicon glyphicon-circle-ban"></span> Unpublish</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-
 				<div class="scroll-container">
-					
-					<section ng-if="documentMgr.infoPanel.data.description">
-						<label>Description</label>
-						<div class="value">{{ documentMgr.infoPanel.data.description }}</div>
-					</section>
+					<section class="fb-details-section">
+						<h2>File Details</h2>
+						<section ng-if="documentMgr.infoPanel.data.description">
+							<h3>Description</h3>
+							<div class="value">{{ documentMgr.infoPanel.data.description }}</div>
+						</section>
+						<section>
+							<h3>Properties</h3>
+							<ul class="nv-pair">
+								<li ng-if="authentication.user">
+									<span class="name">Status:</span>
+									<span class="value">
+										<span class="label label-success" ng-if="documentMgr.infoPanel.data.isPublished">Published</span>
+										<span class="label label-default" ng-if="!documentMgr.infoPanel.data.isPublished">Not Published</span>
+									</span>
+								</li>
+								<li>
+									<span class="name">Document Date:</span>
+									<span class="value">{{ documentMgr.infoPanel.data.dateUploaded | date : format : timezone }}</span>
+								</li>
+								<li>
+									<span class="name">Date Uploaded:</span>
+									<span class="value">{{ documentMgr.infoPanel.data.dateUploaded | date : format : timezone }}</span>
+								</li>
+								<li>
+									<span class="name">Size:</span>
+									<span class="value">{{ documentMgr.infoPanel.data.internalSize | bytes:2 }}</span>
+								</li>
+								<li>
+									<span class="name">Type:</span>
+									<span class="value">{{ documentMgr.infoPanel.data.internalExt }}</span>
+								</li>
+							</ul>
+						</section>
 
-					<section>
-						<label>Properties</label>
-						<ul class="nv-pair">
-							<li ng-if="authentication.user">
-								<span class="name">Status:</span>
-								<span class="value">
-									<span class="label label-success" ng-if="documentMgr.infoPanel.data.isPublished">Published</span>
-									<span class="label label-default" ng-if="!documentMgr.infoPanel.data.isPublished">Not Published</span>
-								</span>
-							</li>
-							<!--
-							<li>
-								<span class="name">Author:</span>
-								<span class="value">{{ documentMgr.infoPanel.data.documentAuthor }}</span>
-							</li>
-							-->
-							<li>
-								<span class="name">Date uploaded:</span>
-								<span class="value">{{ documentMgr.infoPanel.data.dateUploaded | date : format : timezone }}</span>
-							</li>
-							<li>
-								<span class="name">Size:</span>
-								<span class="value">{{ documentMgr.infoPanel.data.internalSize | bytes:2 }}</span>
-							</li>
-							<li>
-								<span class="name">Type:</span>
-								<span class="value">{{ documentMgr.infoPanel.data.internalExt }}</span>
-							</li>
-							<!--
-							<li>
-								<span class="name">Last modified date:</span>
-								<span class="value">{{ documentMgr.infoPanel.data.dateUpdated | date : format : timezone }}</span>
-							</li>
-							<li>
-								<span class="name">Last update by:</span>
-								<span class="value">{{ documentMgr.infoPanel.data.updatedBy.displayName }}</span>
-							</li>
-							-->
-						</ul>
+						<!-- FILE KEYWORDS -->
+						<section>
+							<h3>Keywords</h3>
+							<ul class="comma-separated-list">
+								<li>Keyword 1</li>
+								<li>Keyword 2</li>
+								<li>Keyword 3</li>
+								<li>Keyword 4</li>
+							</ul>
+						</section><!-- / FILE KEYWORDS -->
 
 					</section>
-					<section>
-						<button ng-if="project.userCan.manageDocumentPermissions" class="btn icon-btn" title="Edit Permissions" ng-click="$event.stopPropagation();"
-								x-role-permissions-modal
-								x-context="project"
-								x-object="documentMgr.infoPanel.data">
-							<span class="glyphicon glyphicon-cog"></span></button>
-					</section>
-
 				</div>
-			</div>
+			</div><!-- / FILE DETAILS -->
+
+			<!-- DIRECTORY DETAILS -->
 			<div class="fb-details-content" ng-if="documentMgr.infoPanel.data && documentMgr.infoPanel.type === 'Directory'">
 				<div class="title-panel">
-					<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
-						<span aria-hidden="true">&times;</span>
-					</button>
-					<h2 title="{{documentMgr.infoPanel.data.name}}">{{documentMgr.infoPanel.data.name}}</h2>
-					<!--
-					<h2>Fetching Details...</h2>
-					-->
+					<div class="title-panel-info">
+						<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h2 title="{{documentMgr.infoPanel.data.name}}">{{documentMgr.infoPanel.data.name}}</h2>
+					</div>
 				</div>
-
 				<div class="scroll-container">
 					<section>
 						<ul class="nv-pair">
@@ -416,12 +420,6 @@
 								<span class="name">Description:</span>
 								<span class="value">---</span>
 							</li>
-							<!--
-							<li>
-								<span class="name">Author:</span>
-								<span class="value">---</span>
-							</li>
-							-->
 							<li>
 								<span class="name">Date uploaded:</span>
 								<span class="value">---</span>
@@ -429,7 +427,9 @@
 						</ul>
 					</section>
 				</div>
-			</div>
+			</div><!-- / DIRECTORY DETAILS -->
+
+			<!-- NO DETAILS -->
 			<div class="fb-details-content" ng-if="documentMgr.infoPanel.data && documentMgr.infoPanel.type === 'Multi'">
 				<div class="title-panel">
 					<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
@@ -451,7 +451,8 @@
 				<div class="scroll-container">
 					Select one file or folder to view details.
 				</div>
-			</div>
+			</div><!-- / NO DETAILS -->
+
 		</div>
 	</div>
 
