--- a/modules/documents/client/views/document-manager-move.html
+++ b/modules/documents/client/views/document-manager-move.html
@@ -2,12 +2,16 @@
 	<button type="button" class="btn btn-default close" ng-click="moveDlg.cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
-	<h3 class="modal-title">{{moveDlg.title}}</h3>
+	<h3 class="modal-title">Move Files &amp; Folders</h3>
 </div>
 
 <div class="modal-body">
+
+	<label class="control-label m-b-1" ng-if="moveDlg.view === 'select'">Select a destination Folder</label>
+	<label class="control-label m-b-1" ng-if="moveDlg.view === 'move'">Are you sure you want to move the following Files and Folders to '{{moveDlg.selectedName}}'?</label>
+
 	<div class="file-browser">
-		<div class="fb-header">
+		<div class="fb-header" ng-if="moveDlg.view === 'select'">
 			<ul class="fb-breadcrumbs">
 				<li ng-repeat="node in moveDlg.currentPath">
 					<button class="btn icon-btn" ng-click="moveDlg.view === 'select' && moveDlg.selectNode(node.model.id)">
@@ -19,42 +23,36 @@
 			</ul>
 			<div class="file-batch-actions">
 				<button class="btn icon-btn" title="Add New Folder"
-						ng-if="moveDlg.view === 'select' && project.userCan.manageFolders"
-						ng-disabled="!moveDlg.selectedNode"
-						x-document-mgr-add-folder
-						x-project="project"
-						x-root="moveDlg.rootNode"
-						x-node="moveDlg.selectedNode"><span class="glyphicon glyphicon-folder-close"></span></button>
+					ng-if="moveDlg.view === 'select' && project.userCan.manageFolders"
+					ng-disabled="!moveDlg.selectedNode"
+					x-document-mgr-add-folder
+					x-project="project"
+					x-root="moveDlg.rootNode"
+					x-node="moveDlg.selectedNode"><span class="glyphicon glyphicon-plus-sign"></span></button>
 			</div>
 		</div>
 
+		<!-- Confirm Move Files -->
 		<div id="fbBody" class="fb-body">
 			<div class="fb-list">
+				
 				<!-- Load the File/Folder Directory -->
 				<div class="spinner-container" ng-show="moveDlg.busy">
 					<div class="spinner-new rotating"></div>
 				</div>
 
-				<div class="column-header" ng-if="moveDlg.view === 'select'">
+				<div class="column-header">
 					<div class="fb-col-group">
-						<div class="col name-col first-col sortable" ng-class="{'descending': !moveDlg.sorting.ascending}" ng-click="moveDlg.view === 'select' && moveDlg.sortBy('name')">
+						<div class="col name-col first-col sortable" ng-class="{'descending': !moveDlg.sorting.ascending}" ng-click="moveDlg.sortBy('name')">
 							<span>Name</span>
-							<span class="sort-icon" ng-show="moveDlg.view === 'select' && moveDlg.sorting.column === 'name'"></span>
+							<span class="sort-icon" ng-show="moveDlg.sorting.column === 'name'"></span>
 						</div>
 					</div>
 				</div>
-				<div class="column-header" ng-if="moveDlg.view === 'move'">
-					<div class="fb-col-group">
-						<div class="col name-col first-col">
-							<span>Are you sure you want to move these files and folders to '{{moveDlg.selectedName}}'?</span>
-						</div>
-					</div>
-				</div>
+
 				<div class="scroll-container">
 					<div class="scroll-container-inner">
-
 						<div class="empty-directory-msg" ng-if="moveDlg.view === 'select' && moveDlg.currentDirs.length == 0 && moveDlg.currentFiles.length == 0">This folder is empty.</div>
-
 						<ul ng-if="moveDlg.view === 'select'">
 							<li class="fb-list-item" ng-class="{'selected': doc.selected}" ng-repeat="doc in moveDlg.currentDirs">
 								<span class="fb-col-group"
@@ -106,11 +104,15 @@
 		</div>
 	</div>
 </div>
-<div class="modal-footer clearfix">
-	<button ng-if="moveDlg.view === 'select'" class="btn btn-default" type="button" ng-click="moveDlg.cancel()">Cancel</button>
-	<button ng-if="moveDlg.view === 'select'" class="btn btn-primary" type="button" ng-disabled="!moveDlg.selectedNode" ng-click="moveDlg.select()">Select</button>
 
-	<button ng-if="moveDlg.view === 'move'" class="btn btn-default" type="button" ng-click="moveDlg.cancel()">Close</button>
-	<button ng-if="moveDlg.view === 'move'" class="btn btn-default" type="button" ng-click="moveDlg.back()">Back</button>
-	<button ng-if="moveDlg.view === 'move'" class="btn btn-primary" type="button" ng-disabled="!moveDlg.selectedNode" ng-click="moveDlg.move()">Move</button>
+<div class="modal-footer clearfix">
+	<div ng-if="moveDlg.view === 'select'">
+		<button class="btn btn-default" ng-click="moveDlg.cancel()">Cancel</button>
+		<button class="btn btn-primary" ng-disabled="!moveDlg.selectedNode" ng-click="moveDlg.select()">Select</button>
+	</div>
+	<div ng-if="moveDlg.view === 'move'">
+		<button class="btn btn-default pull-left" ng-click="moveDlg.back()">Select a Different Folder</button>
+		<button class="btn btn-default" ng-click="moveDlg.cancel()">Cancel</button>
+		<button class="btn btn-primary" ng-disabled="!moveDlg.selectedNode" ng-click="moveDlg.move()">Move</button>
+	</div>
 </div>
