MEM-150 - Document UI - Move Files / Folders
- Fixed a small issue with incorrect iconography in the move files/folders interface.

--- a/modules/documents/client/views/document-manager-move.html
+++ b/modules/documents/client/views/document-manager-move.html
@@ -28,7 +28,7 @@
 					x-document-mgr-add-folder
 					x-project="project"
 					x-root="moveDlg.rootNode"
-					x-node="moveDlg.selectedNode"><span class="glyphicon glyphicon-plus-sign"></span></button>
+					x-node="moveDlg.selectedNode"><span class="glyphicon glyphicon-folder-close"></span></button>
 			</div>
 		</div>
 
