MEM-150 - Document UI - Move Files / Folders
- Adding disabled state

--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -353,6 +353,10 @@ $list-selected-border: 1px solid #4187c9;
                 display: block;
             }
         }
+
+        &.disabled {
+            opacity: 0.5;
+        }
     }
 
     .fb-col-group {
