--- a/modules/documents/client/views/document-manager-move.html
+++ b/modules/documents/client/views/document-manager-move.html
@@ -54,20 +54,30 @@
 					<div class="scroll-container-inner">
 						<div class="empty-directory-msg" ng-if="moveDlg.view === 'select' && moveDlg.currentDirs.length == 0 && moveDlg.currentFiles.length == 0">This folder is empty.</div>
 						<ul ng-if="moveDlg.view === 'select'">
-							<li class="fb-list-item" ng-class="{'selected': doc.selected}" ng-repeat="doc in moveDlg.currentDirs">
+							<li class="fb-list-item" ng-class="{'selected': doc.selected, 'disabled': doc.sourceDir}" ng-repeat="doc in moveDlg.currentDirs">
 								<span class="fb-col-group"
-									  ng-click="$event.originalEvent.dropdown || moveDlg.selectDir(doc)"
-									  ng-dblclick="$event.originalEvent.dropdown || moveDlg.openDir(doc)" title="{{doc.model.name}}">
-								<span class="col name-col first-col">
-									<span class="avatar">
-										<span ng-if="!doc.sourceDir" class="fb-folder glyphicon glyphicon-folder-close"></span>
-										<span ng-if="doc.sourceDir" class="fb-folder glyphicon glyphicon-fire"></span>
-									</span>
-									<span class="name">
-										{{ doc.model.name }}
+									ng-if="!doc.sourceDir"
+									ng-click="$event.originalEvent.dropdown || moveDlg.selectDir(doc)"
+									ng-dblclick="$event.originalEvent.dropdown || moveDlg.openDir(doc)">
+									<span class="col name-col first-col">
+										<span class="avatar">
+											<span class="fb-folder glyphicon glyphicon-folder-close"></span>	
+										</span>
+										<span class="name" title="{{doc.model.name}}">
+											{{ doc.model.name }}
+										</span>
 									</span>
 								</span>
-							</span>
+								<span class="fb-col-group" ng-if="doc.sourceDir">
+									<span class="col name-col first-col">
+										<span class="avatar" title="You can't move the folder &quot;{{doc.model.name}}&quot; into itself.">
+											<span class="fb-folder glyphicon glyphicon-folder-close"></span>
+										</span>
+										<span class="name" title="You can't move the folder &quot;{{doc.model.name}}&quot; into itself.">
+											{{ doc.model.name }}
+										</span>
+									</span>
+								</span>
 							</li>
 						</ul>
 						<ul ng-if="moveDlg.view === 'move'">
