MEM-150 - Documents UI - Move Files / Folders
- Added small delay to the loading indicator to prevent unnecessary 'flashing' in the interface.

--- a/modules/core/client/styles/spinner.scss
+++ b/modules/core/client/styles/spinner.scss
@@ -25,6 +25,7 @@ $spinner-invert-bg: rgba(0,0,0,0.8);
   	padding: 5%;
 	background: $spinner-bg;
 	z-index: 4;
+	transition: all linear 0.5s;
 
 	&.inverted,
 	&.transparent {
