--- a/modules/documents/client/views/document-manager-move.html
+++ b/modules/documents/client/views/document-manager-move.html
@@ -37,7 +37,7 @@
 			<div class="fb-list">
 				
 				<!-- Load the File/Folder Directory -->
-				<div class="spinner-container" ng-show="moveDlg.busy">
+				<div class="spinner-container" ng-show="moveDlg.busy" ng-animate>
 					<div class="spinner-new rotating"></div>
 				</div>
 
