--- a/modules/documents/client/views/document-manager-edit.html
+++ b/modules/documents/client/views/document-manager-edit.html
@@ -1,4 +1,4 @@
-<form name="editFileForm" novalidate>
+<form class="fb-edit-form" name="editFileForm" novalidate>
 	<div class="modal-header">
 		<button ng-disabled="editFileProperties.busy" type="button" class="btn btn-default close" ng-click="editFileProperties.cancel()">
 			<span aria-hidden="true">&times;</span>
@@ -14,33 +14,46 @@
 		</div>
 		-->
 
-		<div class="form-group" x-show-errors>
+		<div class="form-group file-type" x-show-errors>
 			<label for="displayName" class="control-label">Display Name<em class="required">(Required)</em></label>
 			<input class="form-control" id="displayName" name="displayName" type="text" ng-model="doc.displayName" required>
 		</div>
 
-		<div class="form-group" x-show-errors>
+		<div class="form-group document-type" x-show-errors>
 			<label class="control-label" for="type">Document Type<em class="required">(Required)</em></label>
 			<select class="form-control" title="Document Type" id="type" name="type"
-					ng-model="doc.documentType"
-					ng-options="type for type in types"
-					required></select>
+				ng-model="doc.documentType"
+				ng-options="type for type in types"
+				required></select>
 		</div>
 
-		<div class="form-group" x-show-errors>
-			<label for="documentDate"  class="control-label">Document Date<em class="required">(Required)</em></label>
-			<div class="input-group select-file-date">
-				<input class="form-control" id="documentDate" name="documentDate" ng-model="doc.documentDate" type="text" uib-datepicker-popup  is-open="datePicker.opened" datepicker-options="dateOptions" close-text="Close" placeholder="YYYY-MM-DD" disabled required/>
+		<div class="form-group datepicker" x-show-errors>
+			<label class="control-label" for="documentDate">Document Date<em class="required">(Required)</em></label>
+			<div class="input-group">
+				<input class="form-control" placeholder="YYYY-MM-DD"  id="documentDate" name="documentDate" 
+					ng-model="doc.documentDate" type="text" 
+					uib-datepicker-popup  
+					is-open="datePicker.opened" 
+					datepicker-options="dateOptions"
+					close-text="Close" 
+					disabled 
+					required/>
 				<span class="input-group-btn">
 					<button class="btn btn-default" ng-click="dateOpen()"><span class="glyphicon glyphicon-calendar"/></button>
 				</span>
 			</div>
 		</div>
 
-		<div class="form-group" x-show-errors>
-			<label for="dateUploaded"  class="control-label">Date Uploaded<em class="required">(Required)</em></label>
-			<div class="input-group select-file-date">
-				<input class="form-control" id="dateUploaded" name="dateUploaded" ng-model="doc.dateUploaded" type="text" uib-datepicker-popup  is-open="dateUploadedPicker.opened" datepicker-options="dateOptions" close-text="Close" placeholder="YYYY-MM-DD" disabled required/>
+		<div class="form-group datepicker" x-show-errors>
+			<label class="control-label" for="dateUploaded">Date Uploaded<em class="required">(Required)</em></label>
+			<div class="input-group datepicker">
+				<input class="form-control" placeholder="YYYY-MM-DD" id="dateUploaded" name="dateUploaded" type="text"
+					ng-model="doc.dateUploaded"
+					uib-datepicker-popup is-open="dateUploadedPicker.opened" 
+					datepicker-options="dateOptions" 
+					close-text="Close"
+					disabled 
+					required/>
 				<span class="input-group-btn">
 					<button class="btn btn-default" ng-click="dateUploadedOpen()"><span class="glyphicon glyphicon-calendar"/></button>
 				</span>
@@ -67,6 +80,7 @@
 			</div>
 		</div>
         -->
+
 		<div class="form-group m-b-0" x-show-errors>
 			<label for="description" class="control-label">Description</label>
 			<textarea class="form-control" id="description" name="description" ng-model="doc.description" size="8" ></textarea>
