--- a/modules/documents/client/views/document-manager-edit.html
+++ b/modules/documents/client/views/document-manager-edit.html
@@ -3,7 +3,7 @@
 		<button ng-disabled="editFileProperties.busy" type="button" class="btn btn-default close" ng-click="editFileProperties.cancel()">
 			<span aria-hidden="true">&times;</span>
 		</button>
-		<h3 class="modal-title">Edit File  &nbsp;&rsaquo;&nbsp;  {{doc.displayName}}</h3>
+		<h3 class="modal-title">Edit File  &nbsp;&rsaquo;&nbsp;  {{originalName}}</h3>
 	</div>
 
 	<div class="modal-body">
@@ -16,15 +16,31 @@
 
 		<div class="form-group file-type" x-show-errors>
 			<label for="displayName" class="control-label">Display Name<em class="required">(Required)</em></label>
-			<input class="form-control" id="displayName" name="displayName" type="text" ng-model="doc.displayName" required>
+			<input class="form-control" id="displayName" name="displayName" type="text" ng-model="doc.displayName" required ng-blur="validate()">
 		</div>
 
 		<div class="form-group document-type" x-show-errors>
-			<label class="control-label" for="type">Document Type<em class="required">(Required)</em></label>
-			<select class="form-control" title="Document Type" id="type" name="type"
+			<label class="control-label" for="documentType">Document Type</label>
+			<select class="form-control" title="Document Type" id="documentType" name="documentType"
 				ng-model="doc.documentType"
 				ng-options="type for type in types"
-				required></select>
+				ng-change="validate()"></select>
+		</div>
+
+		<div ng-show="doc.documentType === 'Inspection Report'">
+			<div class="form-group document-type" x-show-errors>
+				<label for="inspectorInitials" class="control-label">Inspector Initials<em class="required">(Required)</em></label>
+				<input class="form-control" id="inspectorInitials" name="inspectorInitials" type="text" ng-model="doc.inspectionReport.inspectorInitials" ng-required="doc.documentType === 'Inspection Report'" ng-blur="validate()">
+			</div>
+
+			<div class="form-group document-type" ng-class="{'has-error': editFileForm.followup.$invalid}" x-show-errors>
+				<label for="followup" class="control-label">Follow Up<em class="required">(Required)</em></label>
+				<select class="form-control" title="Document Type" id="followup" name="followup"
+						ng-model="doc.inspectionReport.followup"
+						ng-options="type for type in inspectionReportFollowupTypes"
+						ng-required="doc.documentType === 'Inspection Report'"
+						ng-change="validate()"></select>
+			</div>
 		</div>
 
 		<div class="form-group datepicker" x-show-errors>
@@ -37,53 +53,22 @@
 					datepicker-options="dateOptions"
 					close-text="Close" 
 					disabled 
-					required/>
+					required
+					ng-change="validate()"/>
 				<span class="input-group-btn">
 					<button class="btn btn-default" ng-click="dateOpen()"><span class="glyphicon glyphicon-calendar"/></button>
 				</span>
 			</div>
 		</div>
 
-		<div class="form-group datepicker" x-show-errors>
-			<label class="control-label" for="dateUploaded">Date Uploaded<em class="required">(Required)</em></label>
-			<div class="input-group datepicker">
-				<input class="form-control" placeholder="YYYY-MM-DD" id="dateUploaded" name="dateUploaded" type="text"
-					ng-model="doc.dateUploaded"
-					uib-datepicker-popup is-open="dateUploadedPicker.opened" 
-					datepicker-options="dateOptions" 
-					close-text="Close"
-					disabled 
-					required/>
-				<span class="input-group-btn">
-					<button class="btn btn-default" ng-click="dateUploadedOpen()"><span class="glyphicon glyphicon-calendar"/></button>
-				</span>
-			</div>
+		<div class="form-group file-type" x-show-errors>
+			<label for="documentId" class="control-label">Document ID</label>
+			<input class="form-control" id="documentId" name="documentId" type="text" ng-model="doc.documentId" ng-blur="validate()">
 		</div>
-
-		<!--
-		<div class="form-group">
-			<label class="control-label">Keywords</label>
-			<div class="form-control tag-list-container">
-			<ul class="tag-list clearfix">
-				<li class="tag ng-scope">
-					<span class="tag-name">Keyword 1</span>
-					<button class="btn" ng-click="condition.vcs.splice($index, 1)"><span aria-hidden="true">×</span></button>
-				</li>
-				<li class="tag ng-scope">
-					<span class="tag-name">Keyword 2</span>
-					<button class="btn" ng-click="condition.vcs.splice($index, 1)"><span aria-hidden="true">×</span></button>
-				</li>
-				<li class="add-tag">
-					<button class="btn btn-sm" type="button" title="Link Valued Components" ng-click="editLinkedVcs()"><span class="glyphicon glyphicon-plus"></span></button>
-				</li>
-			</ul>
-			</div>
-		</div>
-        -->
 
 		<div class="form-group m-b-0" x-show-errors>
 			<label for="description" class="control-label">Description</label>
-			<textarea class="form-control" id="description" name="description" ng-model="doc.description" size="8" ></textarea>
+			<textarea class="form-control" id="description" name="description" ng-model="doc.description" size="8"  ng-blur="validate()"></textarea>
 		</div>
 	</div>
 
